--- a/public/css/main.css
+++ b/public/css/main.css
@@ -295,13 +295,13 @@ iframe {
   position: fixed;
   width: 40px;
   height: 40px;
-  bottom: 40px;
-  right: 40px;
+  bottom: 90px;
+  right: 30px;
   background-color: black;
   opacity: 0.5;
   justify-content: center;
   align-items: center;
-  z-index: 1000;
+  z-index: 8888;
   border-radius: 4px;
   transition: all 0.4s;
   -webkit-transition: all 0.4s;
@@ -318,13 +318,6 @@ iframe {
 .btn-back-to-top:hover {
   opacity: 1;
   cursor: pointer;
-}
-
-@media (max-width: 576px) {
-  .btn-back-to-top {
-    bottom: 15px;
-    right: 15px;
-  }
 }
 
 /*[ Restyle Select2 ]
@@ -507,7 +500,7 @@ iframe {
 ///////////////////////////////////////////////////////////
 */
 .header1 {
-  height: 125px;
+  height: 65px;
   -webkit-transition: all 0.3s;
   -o-transition: all 0.3s;
   -moz-transition: all 0.3s;
@@ -765,7 +758,7 @@ li.sale-noti > a {
 }
 
 .header-wrapicon1 img,
-.header-wrapicon2 img {
+. img {
   height: 100%;
 }
 
@@ -782,16 +775,16 @@ li.sale-noti > a {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 16px;
-  height: 16px;
+  width: 20px;
+  height: 20px;
   border-radius: 50%;
-  background-color: #111111;
+  background-color: #e65540;
   color: white;
   font-family: Montserrat-Medium;
   font-size: 12px;
   position: absolute;
   top: 0;
-  right: -10px;
+  right: 1px;
 }
 
 .linedivide1 {
@@ -967,12 +960,20 @@ li.sale-noti > a {
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
-  min-height: 80px;
+  min-height: 65px;
+  height: 65px;
   padding-left: 20px;
   padding-top: 10px;
   padding-bottom: 10px;
   background-color: white;
   display: none;
+}
+
+.applogo{
+  margin-left: 50px;
+  font-size: 18px;
+  font-weight: 700;
+  color: #262626;
 }
 
 /*[ Logo mobile ]
@@ -1004,20 +1005,16 @@ li.sale-noti > a {
   -ms-transform: scale(0.8);
   -o-transform: scale(0.8);
   transform: scale(0.8);
-  margin-top: 5px;
 }
 
 
 /*[ Header icon mobile ]
 -----------------------------------------------------------*/
 .header-icons-mobile {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  align-items: center;
-  margin-right: 15px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 .linedivide2 {
   display: block;
@@ -1029,9 +1026,12 @@ li.sale-noti > a {
 }
 
 .header-icons-mobile .header-cart {
+  position: absolute;
   width: 300px;
-  top: 190%;
-  right: -80px;  
+  top: auto;
+  bottom: 70px;
+  right: 50%;
+  margin-right: -150px;
   z-index: 1100;
   transform-origin: top right;
 }
@@ -1330,12 +1330,12 @@ li.sale-noti > a {
     display: -ms-flexbox;
     display: flex !important;
   }
-  .wrap_header {display: none;}
+  /* .wrap_header {display: none;} */
 
-  .container-menu-header-v3,
+  /* .container-menu-header-v3,
   .container-menu-header-v2,
   .container-menu-header 
-  {display: none;}
+  {display: none;} */
 
   .top-bar {display: none;}
   header {height: auto !important;}
