--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -1,8 +1,9 @@
 .main{
   .swiper-slide{
+    transition-timing-function: linear;
     a{
-      @include setCont(100%, 100%, block);
-      padding: 15px;
+      @include setCont(100%, 100%, flex); 
+      padding: 20px;
       dt{
         margin-top: 23px;
       }
@@ -58,9 +59,10 @@
     border-bottom: 1px solid #bdbdbd;
   }
   .ipt{
-    margin: 15px 0;
+    margin: 15px 0 0;
   }
   .area{
+    background-color: #f5f5f5;
     position: relative;
     .no_search{
       @include font(13, 13, $dark_gray, 500);
@@ -72,4 +74,239 @@
       min-height: 200px;
     }
   }
+  .a1{
+    @include setCont(100%, auto, block, sticky);
+    top: 0;
+    display: block;
+    background: linear-gradient(to right, #f8d14e 0%,#2ce0bf 19%,#76dd2c 40%,#dba62b 60%,#f9dc56 83%,#f8d14e 100%); 
+    background-size: 10000px 100%;
+    animation: bg 15s linear infinite ;
+    padding-top: 40px;
+    .img{
+      @include setCont(198px, 553px, block, relative);
+      @include bg("/main_a2.svg", no-repeat, 50% 50%, 100% auto);
+      @include blind;
+      margin:  0 auto;
+      z-index: 1000;
+    }
+    .bx_bubble{
+      @include font(13, 18);
+      color: $white;
+      font-family: 'Pretendard-SemiBold';
+      position: absolute;
+      padding: 13px 13px;
+      border-radius: 10px;
+      background-color: rgba(0 , 0, 0, 0.8);
+      &.b1{
+        right: 50%;
+        margin-right: -160px;
+        top: 55px;
+      }
+      &.b2{
+        left: 50%;
+        margin-left: -165px;
+        top: 110px;
+      }
+      &.b3{
+        right: 50%;
+        margin-right: -160px;
+        top: 180px;
+        padding-left: 20px;
+      }
+      &.b4{
+        left: 50%;
+        margin-left: -150px;
+        top: 230px;
+      }
+      &.b5{
+        right: 50%;
+        margin-right: -140px;
+        padding-left: 20px;
+        top: 260px;
+      }
+    }
+  }
+
+  .a2{
+    position: relative;
+    margin-top: -240px;
+    background-color: #f5f5f5;
+    box-shadow: 0px -20px 20px 0.2px rgba(0, 0, 0,0.2);
+    z-index: 2000;
+    border-radius: 30px 30px 0 0;
+    .bx_step{
+      h2{
+        @include font(24, 29, $black);
+        font-family: 'Pretendard-Bold';
+        text-align: center;
+        padding: 30px 0;
+      }
+      .step{
+        @include setCont(100%, auto, flex, relative);
+        @include font(18, 18, #F8C616);
+        flex-direction: column;
+        padding: 10px 20px;
+        .s_top{
+          display: flex;
+          align-items: center;
+          margin-bottom: 14px;
+          .s_right{
+            font-family: 'Pretendard-Bold';
+            margin-left: 7px;
+          }
+        }
+        .s_left{
+          @include font(13, 13, $white);
+          @include setCont(25px, 25px, block, relative);
+          padding: 6px 3px;
+          font-family: 'Pretendard-Bold';
+          background-color: $yellow;
+          border-radius: 50%;
+          text-align: center;
+        }
+        .s_cont{
+          p{
+            @include font(19, 28, #3a3a3a);
+            font-family: 'Pretendard-Medium';
+          }
+          .img{
+            margin: 30px 0 0 0;
+          }
+          button{
+            @include setCont(85%, 45px, block, relative);
+            @include font(15, 15, $white);
+            font-family: 'Pretendard-SemiBold';
+            margin: 0 auto;
+            margin-bottom: 30px;
+            border-radius: 30px;
+            background: rgb(247,199,0);
+            background: linear-gradient(90deg, rgba(247,199,0,1) 0%, rgba(251,159,130,1) 100%);
+          }
+        }
+        &.s1{
+          .s_cont{
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            .img{
+              @include setCont(auto, 120px, block);
+              @include bg("/step1.png", no-repeat, 50% 50%, 100% auto);
+              @include blind;
+              margin: 15px 0;
+            }
+          }     
+        }
+        &.s2{
+          .s_cont{
+            width: 100%;
+            .img{
+              @include setCont(230px, 150px, block);
+              @include bg("/step2.png", no-repeat, 50% 50%, 100% auto);
+              @include blind;
+              margin: 0 auto;
+              margin-top: 30px;
+              margin-bottom: 30px;
+            }
+          }     
+        }
+        &.s3{
+          .s_cont{
+            width: 100%;
+            .img{
+              @include setCont(200px, 170px, block);
+              @include bg("/step3.png", no-repeat, 50% 50%, 100% auto);
+              @include blind;
+              margin: 0 auto;
+              margin-top: 30px;
+              margin-bottom: 30px;
+            }
+          }     
+        }
+        &.s4{
+          .s_cont{
+            width: 100%;
+            margin-bottom: 10px;
+            .img{
+              @include setCont(200px, 170px, block);
+              @include bg("/step3.png", no-repeat, 50% 50%, 100% auto);
+              @include blind;
+              margin: 0 auto;
+              margin-top: 30px;
+              margin-bottom: 30px;
+            }
+          }   
+        }
+      }
+    }
+  }
 }
+
+@keyframes bg{
+  0%{
+    background-position-x: 0;
+  }
+  
+  100%{
+    background-position-x: 10000px;
+  }
+}
+
+.bx_arrow{
+  @include setCont(100%, 10px, block);
+  position: relative;
+  margin: 0 auto;
+  .arrows {
+    opacity: 0;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform-origin: 50% 50%;
+    transform: translate3d(-50%, -50%, 0);
+  }
+}
+
+
+.arrow-first {
+  animation: arrow-movement 2s ease-in-out infinite;
+  margin-top: -10px;
+}
+.arrow-second {
+  animation: arrow-movement 2s 1s ease-in-out infinite;
+}
+
+.arrows:before,
+.arrows:after {
+  background: $yellow;
+  content: '';
+  display: block;
+  height: 2px; 
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 20px;
+}
+
+.arrows:before {
+  transform: rotate(45deg) translateX(-23%);
+  transform-origin: top left;
+}
+
+.arrows:after {
+  transform: rotate(-45deg) translateX(23%);
+  transform-origin: top right;
+}
+
+// Animation
+@keyframes arrow-movement {
+  0% { 
+      opacity: 0;
+      top: 45%;
+  }
+  70% {
+      opacity: 1;
+  }
+  100% { 
+      opacity: 0;
+  }
+}
+
