--- a/src/assets/scss/_reset.scss
+++ b/src/assets/scss/_reset.scss
@@ -3,9 +3,35 @@
 @include setFont("Pretendard-Medium", "../fonts/Pretendard-Medium", 400);
 @include setFont("Pretendard-Bold", "../fonts/Pretendard-Bold", 500);
 @include setFont("Pretendard-ExtraBold", "../fonts/Pretendard-ExtraBold", 600);
+@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
+
+
+@font-face {
+  font-family: 'Pretendard-Medium';
+  src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Pretendard-SemiBold';
+  src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-SemiBold.woff') format('woff');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Pretendard-Bold';
+  src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Bold.woff') format('woff');
+  font-weight: 600;
+  font-style: normal;
+}
+
+.font_yellow{
+  color: #f9dc56;
+}
 
 html, body {
-  @include fontfamily(400);
+  font-family: 'Pretendard-Medium', 'Noto Sans KR', 'Montserrat', 'Nanum Gothic', sans-serif;
   border: none;
   font-size: 15px;
   line-height: calcRem(18);
