--- a/public/css/main.css
+++ b/public/css/main.css
@@ -758,7 +758,7 @@ li.sale-noti > a {
 }
 
 .header-wrapicon1 img,
-. img {
+ .img {
   height: 100%;
 }
 
@@ -1107,7 +1107,6 @@ li.sale-noti > a {
 
 .side-menu .sub-menu > li {
   padding-left: 12px;
-  padding-top: 
 }
 
 .side-menu .sub-menu a:hover {
@@ -2068,55 +2067,14 @@ li.sale-noti > a {
 .table-shopping-cart {
   border-collapse: collapse;
   width: 100%;
-  min-width: 992px;
 }
 
 .table-shopping-cart .table-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   border-top: 1px solid #e6e6e6;
   border-bottom: 1px solid #e6e6e6;
-}
-
-.table-shopping-cart .column-1 {
-  width: 225px;
-  padding-left: 50px;
-}
-.table-shopping-cart .column-2 {
-  width: 330px;
-  padding-right: 30px;
-}
-.table-shopping-cart .column-3 {
-  width: 133px;
-  padding-right: 30px;
-}
-.table-shopping-cart .column-4 {
-  width: 355px;
-  padding-right: 30px;
-}
-.table-shopping-cart .column-5 {
-  padding-right: 30px;
-}
-
-.table-shopping-cart .table-head th {
-  font-family: Montserrat-Bold;
-  font-size: 13px;
-  color: #555555;
-  line-height: 1.5;
-  text-transform: uppercase;
-  padding-top: 16px;
-  padding-bottom: 16px;
-}
-
-.table-shopping-cart td {
-  font-family: Montserrat-Regular;
-  font-size: 16px;
-  color: #555555;
-  line-height: 1.5;
-  padding-top: 37px;
-  padding-bottom: 30px;
-}
-
-.table-shopping-cart .table-row .column-2 {
-  font-size: 15px;
 }
 
 
