--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -76,12 +76,13 @@ footer{
   left: 0;
   bottom: 0;
   width: 100%;
-  height: 60px;
+  height: 74px;
   display: flex;
   align-items: center;
   justify-content: space-around;
   z-index: 9999;
   bottom: 0;
+  box-shadow: 0 0 20px 2px rgba(0,0,0,0.08);
 }
 .icon {
   width: 40px;
