qa와 헤더 수정

--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -507,7 +507,7 @@ button, a {
     padding: 20px 0;
     li{
       @include font(15, 25, $dark_gray);
-      font-family: 'Pretendard-Regular';
+      font-family: 'Pretendard-Medium';
       text-align: justify;
     }
   }
