--- a/src/assets/scss/_sub.scss
+++ b/src/assets/scss/_sub.scss
@@ -43,6 +43,11 @@
     padding: 25px;
     .visual{
       padding: 40px 25px 30px 25px;
+      .right{
+        h2{
+          margin: 30px 0 20px;
+        }
+      }
     }
   }
   .area_subject_cont{
@@ -866,15 +871,15 @@ a {
   h1{
     @include font(25, 25, $black);
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
     align-items: center;
     font-family: 'Pretendard-Bold';
     text-align: center;
-    padding-top: 20px;
+    padding-top: 25px;
     &::before{
       @include setCont(150px, 110px, block, relative);
       @include bg("/qa.svg", no-repeat, 50% 50%, 100% auto);
-      margin-bottom: 20px;
+      margin-top: 40px;
     }
   }
   .bx_fold{
